<resources>
    <string name="app_name">Earth Wave</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">Earthquake</string>
    <string name="n1">"ভূমিকম্পে ‘নড়েছে’ জাপানের প্রযুক্তি খাত"</string>
    <string name="large_text">
        "ভূ-অভ্যন্তরে শিলায় পীরনের জন্য যে শক্তির সঞ্চয় ঘটে, সেই শক্তির হটাৎ মুক্তি ঘটলে ভূ-পৃষ্ঠ"
        "ক্ষনিকের জন্য কেঁপে ওঠে এবং ভূ-ত্বকের কিছু অংশ আন্দোলিত হয়। এই রূপ আকস্মিক ও ক্ষনস্থ"
        "ায়ী কম্পনকে ভূমিকম্প (Earthquake) বলে। কম্পন-তরঙ্গ থেকে যে শক্তির সৃষ্টি হয়, তা ভূমিকম্পের"
        "মধ্যমে প্রকাশ পায়। এই তরঙ্গ ভূ-গর্ভের কোনো নির্দিষ্ট অঞ্চলে উৎপন্ন হয় এবং উৎসস্থল থেকে চতুর্দিক"
        "ে ছড়িয়ে পরে। ভূমিকম্প সাধারনত কয়েক সেকেণ্ড থেকে এক/দু-মিনিট স্থায়ী হয়। মাঝে মাঝে কম্পন এত দূর্বল"
        "হয়, তা অনুভব করা যায় না। কিন্তু শক্তিশালি ও বিধ্বংসী ভূমিকম্পে ঘর-বাড়ি ও ধন-সম্পত্তির "
        "ব্যপক ক্ষয়ক্ষতি হয় এবং অসংখ্য প্রাণহানি ঘটে।"


    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Client service login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_galary">GalaryActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_alert">Alert system</string>
    <string name="title_activity_news">"সাম্প্রতিক খবর "</string>
    <string name="next">next</string>
    <string name="title_activity_bn_earth_quake">ভূমিকম্প</string>
    <string name="title_activity_info">"জানুন"</string>
    <string name="h1">"ভূমিকম্প:"</string>
    <string name="n2">"টেক ভূমিকম্পে ‘নড়েছে’ জাপানের প্রযুক্তি খাত
        মোস্তফা মিনহাজ উদ্দিন,  বিডিনিউজ টোয়েন্টিফোর ডটকম
        Published: 2016-04-19 20:46:13.0 BdST Updated: 2016-04-19 20:46:13.0 BdST \n\n"
        "শক্তিশালী ভুমিকম্পে জাপানের বড় প্রতিষ্ঠানগুলো বড় ধরনের ক্ষতির সম্মুখীন হয়েছে। সবচেয়ে বেশি ক্ষতিগ্রস্থ হওয়া প্রতিষ্ঠানগুল
        োর ম   ধ্যে একটি হচ্ছে গাড়ি নির্মাতা প্রতিষ্ঠান টয়োটা।  টয়োটা জানিয়েছে, ভূমিকম্পের কারণে তারা "
        যন্ত্রাংশ স্বল্পতার মুখে পড়েছে। এর ফলে এই সপ্তাহে জাপানে প্রতিষ্ঠানটির গাড়ির উৎপাদন বন্ধ রয়েছে। এ ঘটনায় সোমবার টয়োটার শেয়ার ৪.৮
        শতাংশ পড়ে যায়।  ভূমিকম্পের একটি সিরিজ দক্ষিণ জাপানের কিউশুতে প্রধান গাড়ি নির্মাতা এলাকাকেও কাঁপিয়ে দেয়। বৃহস্পতিবার এ
        বং শনিবারের দুইটি বড় শক্তিশালী ভুমিকম্পে অনেক মানুষ মারা যায় এবং হাজার হাজার ঘরবাড়ি বিধ্বস্ত হয়। অন্যান্য গাড়ি নির্মাতা প্রত
        িষ্ঠানও এই দুর্যোগের পর একই সমস্যার কথা জানায় বলে জানিয়েছে সিএনএন।
        কুমামতোতে সবচেয়ে শক্তিশালী ভুমিকম্পে আরেক জাপানি গাড়ি নির্মাতা প্রতিষ্ঠান হোন্ডার একটি মোটরসাইকেল কারখানায় কার্যক্রম বন্ধ হ
        য়ে গেছে। কারখানাটিতে প্রতিদিন ৭৫০টি মোটরবাইক তৈরি করা হত। প্রতিষ্ঠানটি অন্তত শুক্রবার পর্যন্ত বন্ধ থাকবে আর কারখানাটি আদৌ খুলবে কি-না
        সে ব্যাপারে তারা পরবর্তীতে তাদের সিদ্ধান্ত জানাব"</string>
    <string name="n3">"একুয়েডরে ভূমিকম্পে নিহতের সংখ্যা বেড়ে ৩৫০"</string>
    <string name="n4">\"রয়টার্সের খবরে বলা হয়, ভূমিকম্পের উপকেন্দ্রের কাছে পর্যটন শহর পেদারনালেস সবচেয়ে বেশি ক্ষতিগ্রস্ত হয়েছে।  প্রশান্ত মহাসগারের তীরে পামগাছ ঘেরা ছিমছাম শহরটি পরিণত হয়েছে ধ্বংসস্তূপে।  বহু মানুষকে খোলা আকাশের নিচে রাত কাটাতে হচ্ছে, বিভিন্ন এলাকায় দেখা দিয়েছে খাবার ও পানির সঙ্কট।  ধ্বংসস্তূপের নিচে আটকে পড়াদের উদ্ধারে এখনো মরিয়া চেষ্টা চালিয়ে যাচ্ছেন উদ্ধারকর্মীরা।  ইটালি সফর সংক্ষিপ্ত করে দ্রুত দেশে ফিরে প্রেসিডেন্ট কোরেয়া উদ্ধারকাজে সবচেয়ে বেশি গুরুত্ব দিয়ে বলেছেন, সবকিছু আবার নতুন করে গড়ে তোলা যাবে, কিন্তু প্রাণহানির ক্ষতি পূরণ করা সম্ভব নয়।  ভয়াবহ সেই ভূমিকম্পের পরপরই একুয়েডর সরকার দেশের ছয়টি প্রদেশে জরুরি অবস্থা জারি করে। উদ্ধারকাজে নামানো হয় পুলিশ ও সেনা সদস্যদের।  ভূমিকম্পের পর থেকে পেদারনালেস এলাকায় দেড়শর বেশি পরাঘাত অনুভূত হয়েছে। স্বজন হারানোর বেদনার পাশাপাশি স্থানীয় বাসিন্দাদের মধ্যে কাজ করছে আতঙ্ক। এর মধ্যে রোববার সন্ধ্যায় বৃষ্টি নামলে তাদের ভোগান্তি বেড়ে যায় কয়েক গুণ।  ১৬ মাস বয়সী যমজ শিশুর মা আনা ফারিয়াস (২৩) বার্তা সংস্থা রয়টার্সকে বলেন, “আমরা ভাগ্যবান, আমরা তখন রাস্তায় ছিলাম। আমার পুরো বাড়ি ধসে পড়েছে। আজ রাত আামদের বাইরেই কাটাতে হবে।”  স্থানীয় পুলিশ প্রধান মিল্টন জারাত বলেন, পেদারনালেসের ৬০ শতাংশ বাড়িঘর ধ্বংস হয়ে গেছে। যথাসাধ্য করার চেষ্টা করা হলেও আসলে খুব বেশি কিছু করার সামর্থ্য নগর কর্তৃপক্ষের নেই।  পানি, খাবার আর কম্বলের অভাবের মধ্যে লুটপাট শুরুর খবরও পাওয়া গেছে বলে শহরের মেয়র গাব্রিয়েল আলশিভার বিবিসিকে জানিয়েছেন।  দুর্গত এলাকায় ইতোমধ্যে জরুরি ত্রাণ সামগ্রী পৌঁছাতে শুরু করেছে। খাবার ও জরুরি সামগ্রীর প্রথম চালানগুলো এসেছে প্রতিবেশী দেশ ভেনেজুয়েলা ও মেক্সিকো থেকে।  প্রশান্ত মহাসাগরে ‘রিং অব ফায়ার’ নামে পরিচিত হয়ে ওঠা ভূমিকম্পপ্রবণ এলাকায় একুয়েডরের অবস্থান। ১৯৭৯ সালের পর সেখানে এটাই সবচেয়ে ভয়াবহ ভূমিকম্পের ঘটনা।\"</string>
    <string name="title_activity_smash">ধসে পড়েছে বহু ভবন</string>
    <string name="title_activity_utree">"উপড়ে ফেলা গাছের\"</string>
    <string name="r3">"আমাদের ভূ -পৃষ্ঠ অনেকগুলো প্লেট এর সমন্বয়ে গঠিত ।এই প্লেট গুলো একটি আরেকটির থেকে আলাদা থাকে ফল্ট বা ফাটল দ্বারা ।এই প্লেটগুলোর নিচেই থাকে ভূ-অভ্যন্তরের সকল গলিত পদার্থ । কোন প্রাকৃতিক কারনে এই গলিত পদার্থগুলোর স্থান চ্যুতি ঘটলে প্লেটগুলোরও কিছুটা স্থান চ্যুতি ঘটে। এ কারনে একটি প্লেটের কোন অংশ অপর প্লেটের তলায় ঢুকে যায় যার ফলে ভূমিতে কম্পন সৃষ্টি হয়। আর এই কম্পনই ভূমিকম্প রূপে আমাদের নিকট আবির্ভূত হয়।"</string>
    <string name="h2">"ভূমিকম্পের কারণ"</string>
    <string name="c3">ভূপৃষ্ঠজনিত</string>
    <string name="c2">আগ্নেয়গিরিজনিত</string>
    <string name="c1">শিলাচ্যুতিজনিত</string>
    <string name="c4">ভূপাত</string>
    <string name="r1">কখনো কখনো পাহাড় কিংবা উচু স্থান থেকে বৃহৎ পরিসরে শিলাচ্যুতিজনিত কারনে ভূমিকম্প হতে পারে।</string>
    <string name="title_activity_c2">C2Activity</string>
    <string name="r5">কখনো কখনো আগ্নেয়গিরির বিস্ফোরণ ও গলিত লাভা উৎক্ষিপ্ত হবার কারণে ভূমিকম্পের সৃষ্টি হতে পারে।</string>
    <string name="title_activity_c4">C4Activity</string>
    <string name="r6">কোনো কারণে পাহাড়- পর্বত হতে বৃহৎ শিলাখণ্ড ভূত্বকের ওপর ধসে পড়ে ভূমিকম্প হয়। সাধারণত ভাঁজ পর্বতের নিকট অধিক ভূমিকম্প হয়।</string>
    <string name="title_activity_about">About</string>
    <string name="a">ভুমিকম্প এর শনাক্তকারী ম্যাপ</string>
    <string name="a1">এখনো এমন কোন পদ্ধ্তি আবিস্কার হয়নি যা ভুমিকম্প এর পূর্বাভাস দেবে । কিন্তু রিখটার স্কেল ব্যবহার করে আমরা জানতে পারি কোন কোনএলাকা ভুমিকম্পের শিকার হয় বেশি অর্থাৎ রিখটার স্কেল এর মাত্রা অনুযায়ী কোন কোন এলাকা বেশি ভুমিকম্প প্রবণ । তাই আমাদের এই আপ্লিকেশন এ এমন কিছু ডাঁটা থাকবে যা সাম্প্রতিক কালের হউয়া সবচেয়ে মারাত্নক ভুমিকম্প সম্পর্কেবিবরন থাকবে যাতে ভুমিকম্পের সম্ভাব্য এলাকা সম্পর্কে ধারনা পাওয়া যায় । এখানে আমরা গুগল ম্যাপ ব্যবহার করব ।</string>
    <string name="p">সতর্ক ব্যবস্থা</string>
    <string name="p1">"ভুমিকম্পের ঘটনা ও মাত্রা আমরা সিস্‌মোগ্রাফ দিয়ে মাপতে পারি । আমাদের এই আপ্লিকেশন এ আমরা সিস্‌মোগ্রাফ এর ব্যাবহার করব যাতে কম্পন স্পর্শ যন্ত্র (vibration sensor) এর ব্যাবহার থাকবে যদিও তা সহজলভ্য নয় ।\n\n"  "সিস্‌মোগ্রাফ হল একটা যন্ত্র, যা ভূমিকম্পের সময় ভূমির গতি পরিমাপ করে ও তার রেকর্ড রাখে। প্রথমটা ১৮৯০ সালে উদ্ভাবন করা হয়েছে। আজকে, সারা পৃথিবীতে ৪,০০০টারও বেশি সিস্‌মোগ্রাফ স্টেশন কাজ করে চলেছে"</string>
    <string name="k">আমরা আছি আপনার পাশে</string>
    <string name="k1">ভুমিকম্পের মত প্রাকৃতিক দুর্যোগে ক্ষয়ক্ষতি নিরসন ও মানুষকে সাহায্য করার জন্য অনেক সরকারি ও বেসরকারি সংস্থা রয়েছে । যেমন সামরিক বাহিনী , ফায়ার সার্ভিস ,এনজিও,সেচ্ছাসেবক ছাত্র ও অন্যান্য দল ,আন্তর্জাতিক সাহায্য সংস্থা যেমন-রেড ক্রস ও রেড ক্রিসেন্ট ইত্যাদি । EarthWave এ আমরা চেষ্টা করেছি এসব সংস্থার নাম,ঠীকানা ,মোবাইল নাম্বার,হেডকোয়ারটার, সবচেয়ে কাছের নিরাপদ জায়গা যাতে আশ্রয় ,ওষুধ ইত্যাদি পাওয়া যায় ।</string>
    <string name="title_activity_moto">Moto</string>
    <string name="m">ভূমিকম্প সম্পর্কে হুঁশিয়ার</string>
    <string name="title_activity_environment">Environment</string>
    <string name="e">পরিবেশ দূষণ ও অবক্ষয়</string>
    <string name="e1">পরিবেশের প্রতিটা উপাদানের সুসমন্বিত রূপই হলো সুস্থ পরিবেশ। এই সুসমন্বিত রূপের ব্যতয়ই পরিবেশের দূষণ ঘটায় এবং পরিবেশের স্বাভাবিক মাত্রার অবক্ষয় দেখা দেয়। পরিবেশ বিভিন্ন কারণে দুষিত হতে পারে। প্রাকৃতিক কারণের পাশাপাশি মানবসৃষ্ট কারণও এর সাথে দায়ী। পরিবেশ দূষণের জন্য বিশেষভাবে দায়ী ১২টি মারাত্মক রাসায়নিক দ্রব্যকে একত্রে ডার্টি ডজন বা নোংরা ডজন হিসেবে আখ্যায়িত করা হয়। এই ১২টি রাসায়নিক দ্রব্যের মধ্যে ৮টি কীটনাশক অলড্রিন (aldrin), ডায়েলড্রিন (dieldrin), ক্লোরডেন (chlordane), এনড্রিন (endrin), হেপ্টাক্লোর (heptachlor), ডিডিটি (DDT), মিরেক্স (mirex), এবং টক্সাফেন (toxaphene); দুটি শিল্পজাত রাসায়নিক দ্রব্য পিসিবি (PCBs) এবং হেক্সাক্লোরোবেনজিন (hexachlorobenzene); এবং অন্য দুটো হলো কারখানায় উৎপন্ন অনাকাঙ্ক্ষিত উপজাত: ডাইওক্সিন (dioxin) এবং ফিউরান (furan)। খাদ্যচক্রে প্রবেশ করে পৃথিবীব্যাপী সব পরিবেশের সব ধরণের জীবজন্তুর উপর তীব্র প্রতিক্রিয়া ঘটায় এই বিষাক্ত পদার্থগুলো। ত্রুটিপূর্ণ শিশুর জন্ম, ক্যান্সার উৎপাদন, ভ্রুণ বিকাশের নানাবিধ সমস্যার মূলেই দায়ী থাকে এই ডার্টি ডজন।[২]</string>
    <string name="h4">বাংলাদেশের ভূমিকম্প</string>
</resources>