<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tarikul.myapplication4.PhotoActivity">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/c1"
        android:id="@+id/button"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/c2"
        android:id="@+id/button2"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/c3"
        android:id="@+id/button3"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/c4"
        android:id="@+id/button4"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/h2"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
