<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tarikul.myapplication4.NewsActivity"
    tools:showIn="@layout/activity_news">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/scrollView">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/n1"
               android:id="@+id/tv"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true"
               android:textSize="30dp"/>
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/japan"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/n2"
               android:id="@+id/tv1"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/n3"
               android:id="@+id/tv2"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true"
               android:textSize="30dp"/>
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ecuador"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/n4"/>

       </LinearLayout>
   </ScrollView>



</RelativeLayout>
